# MontyMate

./: .gitignore  pyproject.toml  readme.md  structure.txt
apps/: montymate_ui.py
resources/: readme.md
resources/configs/: llm_routing_v1.yaml
resources/policies/: default_fastapi_policy_v1.yaml  default_python_cli_policy_v1.yaml  default_python_library_policy_v1.yaml
resources/profiles/: fastapi_service_v1.yaml  python_cli_v1.yaml  python_library_v1.yaml
resources/schemas/: decision_record_v1.yaml  guard_object_v1.yaml  module_spec_v1.yaml
resources/tools/: tool_registry_v1.yaml
resources/workflows/: python_unified_v1.yaml
src/montymate/: __init__.py  app.py  constants.py  events.py  validators.py
src/montymate/cli/: main.py
src/montymate/config/: models.py  resolver.py
src/montymate/core/: types.py
src/montymate/data/: artifacts.py  db.py  migration.py  paths.py  repo.py  services.py  types.py
src/montymate/engine/: guards.py  guards_impl.py  state.py  workflow_engine.py  workflow_engine_impl.py
src/montymate/gates/: hitl.py  models.py
src/montymate/llm/: gateway_impl.py
src/montymate/llm/providers/: http.py  ollama_chat.py  openai_chat.py  openai_compat_chat.py  types.py
src/montymate/mvp/: __init__.py  db.py  pipeline.py  providers.py  routing.py
src/montymate/resources/configs/: llm_routing_v1.yaml
src/montymate/resources/policies/: default_fastapi_policy_v1.yaml
src/montymate/spec_pipeline/: __init__.py  coordinator.py  errors.py  readme.md
src/montymate/tools/: executor.py  models.py  simple_executor.py
(+37 files in other folders)
